# claim-triage-ai

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  dummy.csv  mypy.ini  pre_push_checks.sh  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.lock.txt  requirements.txt  setup.py  streamlit_app.py
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
app/: main.py  schemas.py
app/router/: route_router.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
catboost_info/learn/: events.out.tfevents
claimflowengine/clustering/: cluster_summary.py  clustering_pipeline.py  root_cause_cluster.py
claimflowengine/configs/: feature_config.yaml  paths.py
claimflowengine/inference/: loader.py  merger.py  predictor.py  preprocessor.py
claimflowengine/prediction/: train_denial_model.py
claimflowengine/preprocessing/: build_features.py  feature_engineering.py  text_cleaning.py  transformers.py
claimflowengine/routing/: policy.py
docs/: model_card.md  model_card_cluster.md  model_card_policy.md
models/: cluster_model.joblib  denial_prediction_model.joblib  numeric_transformer.joblib  reducer_model.joblib  target_encoder.joblib
scripts/: cluster_denials.py  combine_predictions_and_clusters.py  commands.txt  data_analysis.py  debug_feature_leakage.py  debug_model_memorization.py  get_path.py  label_clusters.py  mock_data_creation.py  mock_inference_data_creation.py  plot_umap_clusters.py  plot_umap_clusters_fancy.py  predict_denials.py  run_routing_policy.py
tests/: test_postprocessing.py
(+40 files in other folders)
