[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claimtriageai"
version = "0.1.0"
description = "Modular healthcare claims denial prediction and routing system."
authors = [
  { name="ClaimTriageAI Team", email="noreply@example.com" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=1.5.0",
  "scikit-learn>=1.3.0",
  "xgboost>=1.7.5",
  "lightgbm>=3.3.5",
  "faker>=18.0.0",
  "pydantic==1.10.9",
  "fastapi==0.110.0"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.ruff]
line-length = 88
target-version = "py310"
extend-select = ["I", "F", "E", "W"]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q"
testpaths = ["tests"]

[tool.mypy]
plugins = []
ignore_missing_imports = true
strict = true
namespace_packages = true
